fix: button back to home too small and duplicate api get wallet at homepage

--- a/src/app/details/details.page.scss
+++ b/src/app/details/details.page.scss
@@ -2,9 +2,17 @@ ion-item {
     --padding-start: 0;
 }
 
+.back-icon-container {
+    width: 50px;
+    ion-icon {
+        height: 30px;
+        width: 30px;
+    }
+}
+
 ion-content {
     --background: url('https://img5.thuthuatphanmem.vn/uploads/2021/11/09/hinh-nen-chu-meo-may-doremon-cho-dien-thoai_092720489.jpg') no-repeat center center / cover;
-  }
+}
 
 ion-card-header.ios {
     display: flex;
@@ -39,6 +47,7 @@ ion-card-content {
     flex-direction: column;
     gap: 20px;
     border-bottom: 1px solid;
+
     .time {
         padding-top: 20px;
         display: flex;
